SVN Update# 5058 by tong2shot: MirrorCreator: add support for single link. EmbedUpload: code sync with MirrorCreator. LoudUpload: new XFS plugin. RGhost: fixed, add support for country sub domain. ShareSix: fixed. SpankWire: fixed. TurboImageHost: new plugin.