@@ -12,9 +12,7 @@ import cz.vity.freerapid.utilities.LogUtils;
 import org.apache.commons.httpclient.HttpMethod;
 import org.apache.commons.httpclient.methods.GetMethod;
 
-import java.io.IOException;
 import java.net.URI;
-import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.LinkedList;
 import java.util.List;
@@ -30,10 +28,6 @@ class EmbedUploadFileRunner extends AbstractRunner {
     private final static Logger logger = Logger.getLogger(EmbedUploadFileRunner.class.getName());
     private EmbedUploadSettingsConfig config;
 
-    private boolean isSingleLinkURL() {
-        return PlugUtils.find("/\\?[A-Z0-9]{2}=", fileURL);
-    }
-
     private void setConfig() throws Exception {
         EmbedUploadServiceImpl service = (EmbedUploadServiceImpl) getPluginService();
         config = service.getConfig();
@@ -42,7 +36,9 @@ class EmbedUploadFileRunner extends AbstractRunner {
     @Override
     public void runCheck() throws Exception {
         super.runCheck();
-        if (isSingleLinkURL()) return;
+        if (isSingleLink(fileURL)) {
+            return;
+        }
         final GetMethod getMethod = getGetMethod(fileURL);
         if (makeRedirectedRequest(getMethod)) {
             checkProblems();
@@ -58,7 +54,7 @@ class EmbedUploadFileRunner extends AbstractRunner {
         if (!matcher.find()) {
             logger.warning("File name and/or file size not found");
         } else {
-            httpFile.setFileName("Links: " + matcher.group(1).trim());
+            httpFile.setFileName("Links: " + matcher.group(1).replace(" <br>", "").trim());
             httpFile.setFileSize(PlugUtils.getFileSizeFromString(matcher.group(2).trim()));
         }
         httpFile.setFileState(FileState.CHECKED_AND_EXISTING);
@@ -68,10 +64,8 @@ class EmbedUploadFileRunner extends AbstractRunner {
     public void run() throws Exception {
         super.run();
         logger.info("Starting download in TASK " + fileURL);
-        final List<URI> list = new LinkedList<URI>();
-        final boolean isSingleLinkURL = isSingleLinkURL();
-        if (isSingleLinkURL) {
-            processLink(fileURL, list);
+        if (isSingleLink(fileURL)) {
+            processSingleLink(fileURL);
         } else {
             final GetMethod method = getGetMethod(fileURL);
             if (!makeRedirectedRequest(method)) {
@@ -80,50 +74,63 @@ class EmbedUploadFileRunner extends AbstractRunner {
             }
             checkProblems();
             checkNameAndSize();
-            final Matcher matcher = getMatcherAgainstContent("href=['\"](http://www\\.embedupload\\.\\w+?/\\?[A-Z0-9]{2}=[A-Z0-9]+?)['\"]");
-            while (matcher.find()) {
-                try {
-                    processLink(matcher.group(1), list);
-                } catch (ErrorDuringDownloadingException e) {
-                    // discard the exception, sometimes they throw "You should click on the download link : not authorized" error message
+            final List<URI> list = getMirrors(getContentAsString());
+            if (list.isEmpty()) {
+                throw new PluginImplementationException("No available mirrors");
+            }
+            setConfig();
+            if (config.isQueueAllLinks()) { //queue all links
+                getPluginService().getPluginContext().getQueueSupport().addLinksToQueue(httpFile, list);
+            } else { //queue link using priority
+                final List<URL> urlList = new LinkedList<URL>();
+                for (final URI uri : list) {
+                    final URL url = new URL(uri.toURL().toString());
+                    urlList.add(url);
                 }
+                getPluginService().getPluginContext().getQueueSupport().addLinkToQueueUsingPriority(httpFile, urlList);
             }
+            httpFile.setState(DownloadState.COMPLETED);
+            httpFile.getProperties().put("removeCompleted", true);
         }
-        if (list.isEmpty()) throw new PluginImplementationException("No links found");
-        setConfig();
-        if (isSingleLinkURL || config.isQueueAllLinks()) { //queue all links 
-            getPluginService().getPluginContext().getQueueSupport().addLinksToQueue(httpFile, list);
-        } else { //queue link using priority
-            final List<URL> urlList = new LinkedList<URL>();
-            for (final URI uri : list) {
-                final URL url = new URL(uri.toURL().toString());
-                urlList.add(url);
-            }
-            getPluginService().getPluginContext().getQueueSupport().addLinkToQueueUsingPriority(httpFile, urlList);
-        }
-        httpFile.setState(DownloadState.COMPLETED);
-        httpFile.getProperties().put("removeCompleted", true);
     }
 
-    private void processLink(final String singleLinkPage, final List<URI> list) throws ErrorDuringDownloadingException, IOException {
-        final HttpMethod httpMethod = getMethodBuilder()
-                .setReferer(fileURL)
-                .setAction(singleLinkPage)
-                .toGetMethod();
-        if (!makeRedirectedRequest(httpMethod)) {
+    private boolean isSingleLink(String fileUrl) {
+        return PlugUtils.find("/\\?[A-Z0-9]{2}=", fileUrl);
+    }
+
+    private String getTargetUrl(String fromUrl) throws Exception {
+        HttpMethod method = getGetMethod(fromUrl);
+        if (!makeRedirectedRequest(method)) {
             checkProblems();
             throw new ServiceConnectionProblemException();
         }
         checkProblems();
-        final Matcher matcher = getMatcherAgainstContent("link\\s*?:\\s*?<a href=['\"](https?://.+?)['\"]");
+        final Matcher matcher = getMatcherAgainstContent("(?s)link\\s*?:\\s*?<a href=['\"](https?://.+?)['\"]");
         if (!matcher.find()) {
-            throw new PluginImplementationException("Error parsing link");
+            throw new PluginImplementationException("Error getting target URL from: " + fromUrl);
         }
-        try {
-            list.add(new URI(matcher.group(1)));
-        } catch (final URISyntaxException e) {
-            LogUtils.processException(logger, e);
+        return matcher.group(1).trim();
+    }
+
+    private void processSingleLink(String fileUrl) throws Exception {
+        String targetUrl = getTargetUrl(fileUrl);
+        httpFile.setNewURL(new URL(targetUrl));
+        httpFile.setPluginID("");
+        httpFile.setState(DownloadState.QUEUED);
+    }
+
+    private List<URI> getMirrors(String content) {
+        final Matcher matcher = PlugUtils.matcher("href=['\"](http://www\\.embedupload\\.\\w+?/\\?[A-Z0-9]{2}=[A-Z0-9]+?)['\"]", content);
+        final List<URI> list = new LinkedList<URI>();
+        while (matcher.find()) {
+            try {
+                final String targetUrl = getTargetUrl(matcher.group(1));
+                list.add(new URI(targetUrl));
+            } catch (final Exception e) {
+                LogUtils.processException(logger, e);
+            }
         }
+        return list;
     }
 
     private void checkProblems() throws ErrorDuringDownloadingException {
